--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
+<!DOCTYPE html>
+<!--
+This will be the landing page
+-->
 <html>
+    <head>
+        <title>Blah Blah's Watch Store</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <h1>Blah Blah's Watch Store</h1>
+        <div>
+          Here can be some text for a description
+        </div>
+    </body>
 </html>
