Most of these pages have all of the basic structures. There is NO CSS. Alot of it is dummy material and needs to be configured to adhere to the assignment, but this is a solid start.
***Major Change: each product description will now have its own unique page. It was too much work at this stage to template it.

--- a/meet_the_team.html
+++ b/meet_the_team.html
@@ -1,2 +1,18 @@
+<!DOCTYPE html>
+<!--
+    This will be the "Meet The Team Page"
+-->
 <html>
+    <head>
+        <title>Meet the Team</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>        
+        <h1>Meet the Team</h1>
+        <div>
+          Here can be some text for a description
+        </div>
+        <img src=".jpg" alt="This could be a pic of us or random people" style="width:304px;height:228px;">
+    </body>
 </html>
