--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
-This will be the landing page
+    This will be the landing page
+    For help with styling navigation bar (http://www.w3schools.com/css/css_navbar.asp)
 -->
 <html>
     <head>
@@ -9,9 +10,18 @@ This will be the landing page
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="meet_the_team.html">Meet The Team</a></li>
+        </ul>
+        
         <h1>Blah Blah's Watch Store</h1>
         <div>
           Here can be some text for a description
         </div>
+        <img src="tmp_watch_image.jpg" alt="This can be a background watch picture" style="width:304px;height:228px;">
+
     </body>
 </html>
