--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
     <head>
-        <title>Blah Blah's Watch Store</title>
+        <title>The Fresh Watch Store of Bel Air</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
