name and description update
changed name on index and added description.
changed name on products page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
     <head>
-        <title>The Fresh Watch Store of Bel Air</title>
+        <title>The Fresh Watch Store of Bel-Air</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -17,9 +17,9 @@
             <li><a href="meet_the_team.html">Meet The Team</a></li>
         </ul>
         
-        <h1>Blah Blah's Watch Store</h1>
+        <h1>The Fresh Watch Store of Bel-Air</h1>
         <div>
-          Here can be some text for a description
+          Welcome to our watch store, where we have the freshest watch selecction around. <br> We always keep our selection up to date with the latest styles, and we look forward to serving you. 
         </div>
         <img src="tmp_watch_image.jpg" alt="This can be a background watch picture" style="width:304px;height:228px;">
 
