--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Blah Blah's Products</h1>
+        <h1>Our Products</h1>
         <table>
             <tr>
                 <td>
