products page updated
added images, names and hover names

--- a/products.html
+++ b/products.html
@@ -28,48 +28,23 @@
             <tr>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/AP1.jpg" alt="Audemars Piguet 1" style="width:304px;height:228px;">
                         <br>
-                        watch name
+                        Audemars Piguet 1
                     </a>
                 </td>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/AP2.jpg" alt="Audemars Piguet 2" style="width:304px;height:228px;">
                         <br>
-                        watch name
+                        Audemars Piguet 2
                     </a>
                 </td>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/applewatch.jpeg" alt="Apple Watch" style="width:304px;height:228px;">
                         <br>
-                        watch name
-                    </a>
-                </td>
-  
-            </tr>
-            
-                        <tr>
-                <td>
-                    <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
-                        <br>
-                        watch name
-                    </a>
-                </td>
-                <td>
-                    <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
-                        <br>
-                        watch name
-                    </a>
-                </td>
-                <td>
-                    <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
-                        <br>
-                        watch name
+                        Apple Watch
                     </a>
                 </td>
   
@@ -78,23 +53,48 @@
                         <tr>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/hublot1.jpg" alt="Hublot Ferrari" style="width:304px;height:228px;">
                         <br>
-                        watch name
+                        Hublot Ferrari
                     </a>
                 </td>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/hublot2.jpg" alt="Hublot WBC" style="width:304px;height:228px;">
                         <br>
-                        watch name
+                        Hublot WBC
                     </a>
                 </td>
                 <td>
                     <a href="" >
-                        <img src="tmp_watch_image.jpg" alt="should be a product" style="width:304px;height:228px;">
+                        <img src="images/product_images/hublot3.jpg" alt="Hublot Spirit of Big Bang" style="width:304px;height:228px;">
                         <br>
-                        watch name
+                        Hublot Spirit of Big Bang
+                    </a>
+                </td>
+  
+            </tr>
+            
+                        <tr>
+                <td>
+                    <a href="" >
+                        <img src="images/product_images/samsung.jpg" alt="Samsung Smart Watch" style="width:304px;height:228px;">
+                        <br>
+                        Samsung Smart Watch
+                    </a>
+                </td>
+                <td>
+                    <a href="" >
+                        <img src="images/product_images/motorola.png" alt="Moto Smart Watch" style="width:304px;height:228px;">
+                        <br>
+                        Moto Smart Watch
+                    </a>
+                </td>
+                <td>
+                    <a href="" >
+                        <img src="images/product_images/rolex1.jpg" alt="Rolex Sienna" style="width:304px;height:228px;">
+                        <br>
+                        Rolex Sienna
                     </a>
                 </td>
   
