Updates on about page.

--- a/about.html
+++ b/about.html
@@ -4,14 +4,18 @@
 -->
 <html>
     <head>
-        <title>About Us</title>
+        <title>About</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>About Us</h1>
+        <h1>About<br>
+        so, what's the story behind Watch Guyz?
+
+
+         </h1>
         <div>
-           Watch Guyz came about late one night when four of the co-founders - Nick, Brett, Abbas, and Livuth were pulling up to a bar in LA. After spending 30 minutes trying to figure out why we felt apart from everyone else, we noticed we were not wearing watches. It crazy that something so small can make a huge impact in a mans life. The four friends grew frustrated at the lack of their watches. That's when Abbas suggested the idea of creating an ecommerce website where we would sell watches depending on the type of vibe the user was feeling. Watch Guyz is to be able to provide users with a watch that fits their vibe. As most people know its hard to fit in, here at Watch Guys we do that!
+           Watch Guyz came about late one night when four of the co-founders - Nick, Brett, Abbas, and Livuth were pulling up to a bar in LA. After spending 30 minutes trying to figure out why we felt apart from everyone else, we noticed we were not wearing watches. It crazy that something so small can make a huge impact in a mans life. The four friends grew frustrated at the lack of their watches. That's when Abbas suggested the idea of creating an ecommerce website where we would sell watches depending on the type of vibe the user was feeling. Watch Guyz is to be able to provide users with a watch that fits their vibe. As most people know its hard to fit in, here at Watch Guys we do that!<br><br>
         </div>           
         <div>           
           Here can be all of the product brands we carry
