Creation of the first product discription page. Completely styled with the email form working correctly. This is the beginning of separated style sheets, the navigation and body style sheet should be included in every html file

--- a/products.html
+++ b/products.html
@@ -102,12 +102,12 @@
                 background-color:  #cce0ff;
             }
 /*            this is complicated... you will need to ask me about it*/
-            .item_cell:hover .productImage{
+            .item_cell:hover .product_image{
                 max-width:250px; 
                 max-height:275px;
                
             }               
-            .productImage{
+            .product_image{
                 max-width: 200px; 
                 max-height:200px;
             }  
@@ -143,21 +143,21 @@
             <tr>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/AP1.jpg" alt="Audemars Piguet 1">
+                        <img class="product_image" src="images/product_images/AP1.jpg" alt="Audemars Piguet 1">
                         <br>
                         <b>Audemars Piguet</b> <br> QEII Cup
                     </a>
                 </td>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/ap2.jpg" alt="Audemars Piguet 2">
+                        <img class="product_image" src="images/product_images/ap2.jpg" alt="Audemars Piguet 2">
                         <br>
                          <b>Audemars Piguet</b> <br> Royal Oak Offshore
                     </a>
                 </td>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/applewatch.jpeg" alt="Apple Watch">
+                        <img class="product_image" src="images/product_images/applewatch.jpeg" alt="Apple Watch">
                         <br>
                         <b>Apple</b> <br> iWatch
                     </a>
@@ -168,14 +168,14 @@
             <tr>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/hublot1.jpg" alt="Hublot Ferrari">
+                        <img class="product_image" src="images/product_images/hublot1.jpg" alt="Hublot Ferrari">
                         <br>
                         <b>Hublot</b> <br> Ferrari
                     </a>
                 </td>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/hublot2.jpg" alt="Hublot WBC">
+                        <img class="product_image" src="images/product_images/hublot2.jpg" alt="Hublot WBC">
                         <br>
                         <b>Hublot</b> <br> WBC
                     </a>
@@ -193,21 +193,21 @@
             <tr>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/samsung.jpg" alt="Samsung Smart Watch">
+                        <img class="product_image" src="images/product_images/samsung.jpg" alt="Samsung Smart Watch">
                         <br>
                         <b>Samsung</b> <br> Smart Watch
                     </a>
                 </td>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/motorola.png" alt="Moto Smart Watch">
+                        <img class="product_image" src="images/product_images/motorola.png" alt="Moto Smart Watch">
                         <br>
                         <b>Motorola</b> <br> Moto Watch
                     </a>
                 </td>
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/rolex1.jpg" alt="Rolex Sienna">
+                        <img class="product_image" src="images/product_images/rolex1.jpg" alt="Rolex Sienna">
                         <br>
                         <b>Rolex</b> <br> Sienna
                     </a>
@@ -227,7 +227,7 @@
 
                 <td class="item_cell">
                     <a href="" >
-                        <img class="productImage" src="images/product_images/hublot4.jpg" alt="need the name">
+                        <img class="product_image" src="images/product_images/hublot4.jpg" alt="need the name">
                         <br>
                         <b>Hublot</b> <br> Mr. Brainwash
                     </a>
