setup the index.html pages with style and some pictures. Nothing fancy just some basic stuff.

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         
                 <!--        This is the footer-->
         <footer>
-            <ul>
+            <ul style="position: fixed; bottom: 0; width: 100%">
             <li><Div style="font-size: 20px;">University of California, Irvine</div></li>
             <li><Div style="font-size: 20px;">Informatics 124/ CS 137</div></li>
             <li style="float:right;">Spring 2016</li>
