--- a/qeii_cup_description.html
+++ b/qeii_cup_description.html
@@ -70,44 +70,44 @@
                 <tr class="order_product_details">
                     <td>
                         Product Model<br>
-                        <input type="text" name="Product Model">
+                        <input type="text" name="Product Model" required>
                     </td>
                     <td>
                         Size<br>
-                        <input type="text" name="Size">
+                        <input type="text" name="Size" required>
                     </td>
                     <td>
                         Quantity<br>
-                        <input type="text" name="Quantity">
+                        <input type="text" name="Quantity" required> 
                     </td>
                 </tr>
                 <tr class="order_contact_details">
                     <td>
                         First Name<br>
-                        <input type="text" name="First Name">
+                        <input type="text" name="First Name" required>
                     </td>
                     <td>
                         Last Name<br>
-                        <input type="text" name="Last Name">
+                        <input type="text" name="Last Name" required>
                     </td>
                      <td>
                          Phone<br>
-                        <input type="text" name="Phone Number">
+                        <input type="text" name="Phone Number" required>
                     </td>
                 </tr>
 
                 <tr class="order_address_details">
                     <td> Street<br>
-                        <input type="text" name="Street">
+                        <input type="text" name="Street" required>
                     </td>
                     <td>
                         City<br>
-                        <input type="text" name="City">
+                        <input type="text" name="City" required>
                     </td>
                     <td>
                         <ul>
-                            <li>State<br><input type="text" name="State" size="5"></li>
-                            <li style="padding-left: 22px">Zip Code<br><input type="text" name="Zip Code" size="3"></li>
+                            <li>State<br><input type="text" name="State" size="5" required></li>
+                            <li style="padding-left: 22px">Zip Code<br><input type="text" name="Zip Code" size="3" required></li>
                         </ul>
                     </td>
 
