brands and style
added brands, fixed style to match rest of the site

--- a/about.html
+++ b/about.html
@@ -43,57 +43,33 @@
         </div>
 
         <div class="focus">           
-          <table>
+          <table align = "center">
               <tr>
                 <td>
-                    Hublot MP-31<br>
-                    <img src="./images/product_images/hublot1.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
+                    <img src="./images/brand_logos/ap.jpg" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10">
                 </td>
                 <td>
-                    Hublot MP-09<br>
-                    <img src="./images/product_images/hublot2.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
+                    <img src="./images/brand_logos/apple.png" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10">
                 </td>
                 <td>
-                    Hublot MP-98<br>
-                    <img src="./images/product_images/hublot3.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
+                    <img src="./images/brand_logos/hublot.jpg" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10">
                 </td>
-
-                <td>
-                    Hublot MP-21<br>
-                    <img src="./images/product_images/hublot4.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
-                </td>
-
-                <td>
-                    Motorola watch<br>
-                    <img src="./images/product_images/motorola.png" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10"> <br>
-                </td>
-
                 </tr>
-                <tr>
                 <td>
-                    MP-05<br>
-                    <img src="./images/product_images/rolex1.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
+                    <img src="./images/brand_logos/motorola.jpg" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10">
                 </td>
 
                 <td>
-                    MP-05<br>
-                    <img src="./images/product_images/samsung.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;">
+                    <img src="./images/brand_logos/rolex.jpg" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10"> <br>
                 </td>
 
+                
+                
                 <td>
-                    MP-05<br>
-                    <img src="./images/product_images/AP1.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;" hspace = "10">
+
+                    <img src="./images/brand_logos/samsung.jpeg" alt="This can be a background watch picture" style="max-width:200px;max-height:200px;" hspace = "10">
                 </td>
 
-                <td>
-                    MP-05<br>
-                    <img src="./images/product_images/ap2.jpg" alt="This can be a background watch picture" style="width:200px;height:200px;">
-                </td>
-
-                <td>
-                    Apple watch<br>
-                    <img src="./images/product_images/applewatch.jpeg" alt="This can be a background watch picture" style="width:200px;height:200px;">
-                </td>
               </tr>             
           </table>
         </div>         
